test/vm/errors/undefined_var.ach
// Expected error: undefined variable
print(nope)
